# kalman

./: CMakeLists.txt  Makefile  readme.md
python/: test_simple_kalman.py
src/: CMakeLists.txt  IEstimator.hpp  analytic_functions.hpp  extended_kalman_filter.hpp  hungarian.cpp  hungarian.hpp  linear_kalman_filter.cpp  linear_kalman_filter.hpp  multi_tracker.cpp  multi_tracker.hpp  random_variable.cpp  random_variable.hpp
src/simple_kalman/: linear_kalman_filter.cpp  linear_kalman_filter.hpp  linear_kalman_utils.cpp  linear_kalman_utils.hpp
test/: test_analytic_functions.cpp  test_extended_kalman_filter.cpp  test_linear_kalman_filter.cpp
